added rock,paper,scissors btn in html and connected to js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <button id="R">rock</button>
+    <button id="P">paper</button>
+    <button id="S">Scissors</button>
     <script src="script.js"></script>
 </body>
 </html>
