--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <div id="scoreDis">Human : 0 - 0 : Computer</div>
     <button id="R">rock</button>
     <button id="P">paper</button>
     <button id="S">Scissors</button>
