--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+
+    <style>
+        body{
+            width: 90%;
+            height: 75vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
     <div id="scoreDis">Human : 0 - 0 : Computer</div>
-    <button id="R">rock</button>
-    <button id="P">paper</button>
-    <button id="S">Scissors</button>
+    <div id="currentRound"></div>
+    <div class="wrapper">
+        <button id="R">rock</button>
+        <button id="P">paper</button>
+        <button id="S">Scissors</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
